# Chill-in-the-Box

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: device.hpp  renderer.hpp  window.hpp
include/scene/: actor.hpp  camera.hpp  model.hpp  scene.hpp  sphere.hpp
include/utils/: color_util.h  dxr_util.h  gltf_loader.h  math_util.h  print_util.h  shader_compiler.h  texture_util.h
resources/shader/: ch_tri.hlsl  closesthit.hlsl  common.hlsli  miss.hlsl  path_tracer.hlsl  raygen.hlsl
settings/: run.ps1
src/: device.cpp  main.cpp  renderer.cpp  window.cpp
src/scene/: actor.cpp  camera.cpp  model.cpp  scene.cpp  sphere.cpp
